--- a/ProyectoFinal_EQ9/ProyectoFinal_EQ9.csproj
+++ b/ProyectoFinal_EQ9/ProyectoFinal_EQ9.csproj
@@ -41,8 +41,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
+    <Compile Include="Empresa.cs" />
+    <Compile Include="Horario.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.0.AssemblyAttributes.cs" />
+    <Compile Include="Ponente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepEmpresa.cs" />
+    <Compile Include="Sala.cs" />
+    <Compile Include="Superadmin.cs" />
+    <Compile Include="Usuario.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\admin.txt" />
+    <Content Include="bin\Debug\empresas.txt" />
+    <Content Include="bin\Debug\superadmin.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\ProyectoFinal_EQ9.csproj.AssemblyReference.cache" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
